--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -15,6 +15,8 @@
 -->
 
 <resources>
+    <!-- LED Flashlight -->
+    <bool name="has_led_flash">true</bool>
     <!-- celox: enable volume rocker wake feature -->
     <bool name="config_show_volumeRockerWake">true</bool>
 </resources>
